--- a/app/src/main/res/layout/bot_blocks_dialog.xml
+++ b/app/src/main/res/layout/bot_blocks_dialog.xml
@@ -25,6 +25,16 @@
         android:textColor="@color/black_text_color"
         android:text="Choose Block to send"/>
 
+    <ImageView
+        android:layout_width="40dp"
+        android:layout_height="0dp"
+        android:id="@+id/close"
+        android:src="@drawable/ic_highlight_off_black_24dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/title"
+        app:layout_constraintBottom_toBottomOf="@id/title"
+        android:layout_marginEnd="5dp"/>
+
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
