--- a/app/src/main/res/layout/fragment_new_order.xml
+++ b/app/src/main/res/layout/fragment_new_order.xml
@@ -6,8 +6,7 @@
         android:visibility="visible"
         android:id="@+id/order_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/appbar">
+        android:layout_height="wrap_content">
 
 
             <LinearLayout
