--- a/app/src/main/res/layout/fragment_search_order.xml
+++ b/app/src/main/res/layout/fragment_search_order.xml
@@ -6,44 +6,56 @@
     android:layout_height="match_parent"
     tools:context=".order.fragments.CurrentOrderFragment">
 
-    <RelativeLayout
-        android:id="@+id/work_progress"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize">
 
-        <ProgressBar
-            android:id="@+id/ProgressBar"
-            style="?android:attr/progressBarStyleHorizontal"
-            android:layout_width="fill_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:indeterminate="false"
-            android:maxHeight="10dip"
-            android:minHeight="10dip"
-            android:progress="0"
-            android:progressDrawable="@drawable/ic_greenprogress" />
 
-        <TextView
-            android:id="@+id/present"
-            android:layout_width="wrap_content"
+        <FrameLayout
+            android:id="@+id/search_view"
+
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:textColor="@color/white" />
+            android:background="@color/colorPrimary">
 
-        <ImageButton
-            android:layout_alignParentEnd="true"
-            android:id="@+id/bt_expand"
-            android:layout_width="?attr/actionBarSize"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/selectableItemBackgroundBorderless"
-            android:rotation="180"
-            android:tint="@android:color/white"
-            app:srcCompat="@drawable/ic_expand_arrow" />
-    </RelativeLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:layout_margin="8dp"
+                android:background="@drawable/search_bar_background_travel"
+                android:gravity="center_vertical">
+
+                <ImageView
+                    android:src="@drawable/ic_search_black"
+                    android:id="@+id/search"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="16dp"
+                    android:paddingRight="16dp" />
+
+                <EditText
+                    android:hint="@string/writ_phone_number"
+                    android:id="@+id/phone_input"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="@android:color/transparent"
+                    android:imeOptions="actionSearch"
+                    android:inputType="phone" />
+
+                <ImageView
+                    android:src="@drawable/ic_clear_black"
+                    android:id="@+id/clear"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="16dp"
+                    android:paddingRight="16dp" />
+            </LinearLayout>
+
+        </FrameLayout>
+
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/work_progress">
+        android:layout_below="@id/search_view">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -730,6 +742,4 @@
         app:fabSize="normal"
         app:rippleColor="@android:color/white"
         app:srcCompat="@drawable/ic_save_edite" />
-
-
 </RelativeLayout>
