--- a/app/src/main/res/layout/layout_missed_call_no_order_found.xml
+++ b/app/src/main/res/layout/layout_missed_call_no_order_found.xml
@@ -492,6 +492,30 @@
 
             <Space
                 android:layout_width="match_parent"
+                android:layout_height="@dimen/_16sdp"
+                android:layout_marginTop="@dimen/_16sdp"
+                android:layout_marginBottom="@dimen/_16sdp"
+                android:background="#40000000"
+                android:orientation="vertical"
+                android:visibility="invisible">
+
+            </Space>
+
+            <com.greyeg.tajr.helper.font.RobotoTextView
+                android:id="@+id/edit_order"
+                android:layout_marginTop="@dimen/_16sdp"
+                android:layout_gravity="center"
+                style="@style/ButtonStyle.RaisedEmpty"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/main_color_500"
+                android:minWidth="112dp"
+                android:text="@string/edit_order"
+                android:textColor="#fff" />
+
+
+            <Space
+                android:layout_width="match_parent"
                 android:layout_height="@dimen/_50sdp"
                 android:layout_marginTop="@dimen/_16sdp"
                 android:layout_marginBottom="@dimen/_16sdp"
