--- a/app/src/main/res/layout/cancel_order_dialog.xml
+++ b/app/src/main/res/layout/cancel_order_dialog.xml
@@ -1,17 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/cancel_order_title"
         android:text="@string/order_cancelation_reason_label"
-        app:layout_constraintTop_toTopOf="parent"
         android:textColor="@color/white"
         android:textSize="20sp"
         android:padding="5dp"
@@ -21,8 +20,9 @@
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/cacel_order_recycler"
-        app:layout_constraintTop_toBottomOf="@id/cancel_order_title"/>
+        android:id="@+id/cancel_order_recycler"
+
+        />
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
