--- a/app/src/main/res/layout/layout_add_poduct_dialog.xml
+++ b/app/src/main/res/layout/layout_add_poduct_dialog.xml
@@ -1,8 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_margin="5dp"
+    android:elevation="3dp">
+
+<RelativeLayout
+    android:layout_width="match_parent"
     android:layout_height="wrap_content">
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -79,4 +87,12 @@
         </LinearLayout>
     </LinearLayout>
 
+
+    <ImageView
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:id="@+id/close"
+        android:src="@drawable/ic_close_black_24dp"
+        android:layout_alignParentEnd="true"/>
 </RelativeLayout>
+</androidx.cardview.widget.CardView>
