--- a/app/src/main/res/layout/cart_item.xml
+++ b/app/src/main/res/layout/cart_item.xml
@@ -45,8 +45,8 @@
         />
 
     <ImageView
-        android:layout_width="15dp"
-        android:layout_height="15dp"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
         android:id="@+id/increase"
         app:layout_constraintEnd_toEndOf="@id/item_img"
         app:layout_constraintTop_toTopOf="@id/item_img"
@@ -58,16 +58,17 @@
         android:layout_height="wrap_content"
         android:id="@+id/quantity"
         tools:text="2"
-        android:textSize="11sp"
+        android:textSize="14sp"
         android:textColor="@color/white"
         app:layout_constraintTop_toTopOf="@id/item_img"
         app:layout_constraintEnd_toStartOf="@id/increase"
         />
 
     <ImageView
-        android:layout_width="15dp"
-        android:layout_height="15dp"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
         android:id="@+id/decrease"
+        android:scaleType="fitXY"
         app:layout_constraintEnd_toStartOf="@id/quantity"
         app:layout_constraintTop_toTopOf="@id/item_img"
         android:src="@drawable/ic_remove_black_24dp"
