--- a/app/src/main/res/layout/new_order_dialog.xml
+++ b/app/src/main/res/layout/new_order_dialog.xml
@@ -59,11 +59,18 @@
             android:background="#FFFFFF"
             android:orientation="vertical">
 
-            <androidx.recyclerview.widget.RecyclerView
+
+            <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
-                android:layout_height="100dp"
-                android:elevation="3dp"
-                android:id="@+id/cart"/>
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                app:cardElevation="4dp">
+                <androidx.recyclerview.widget.RecyclerView
+                    android:layout_width="match_parent"
+                    android:layout_height="100dp"
+                    android:id="@+id/cart"/>
+            </androidx.cardview.widget.CardView>
+
 
             <LinearLayout
                 android:layout_width="match_parent"
