--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -133,5 +133,6 @@
     <color name="cpb_green_dark">#ff6d9b00</color>
     <color name="cpb_white">@android:color/white</color>
     <color name="email_color">#e0e2e2</color>
+    <color name="txt_bg">#34000000</color>
 
 </resources>
