--- a/app/src/main/res/layout/extra_data_layout.xml
+++ b/app/src/main/res/layout/extra_data_layout.xml
@@ -30,6 +30,8 @@
         android:layout_height="40dp"
         app:layout_constraintHorizontal_weight="7"
         android:id="@+id/value"
+        tools:hint="enter name here"
+        android:gravity="center"
         android:padding="5dp"
         android:background="@color/gray"
         app:layout_constraintTop_toTopOf="parent"
@@ -46,6 +48,7 @@
         android:background="@color/gray"
         app:layout_constraintHorizontal_weight="7"
         android:id="@+id/spinnerValue"
+        android:visibility="invisible"
         android:padding="5dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="@id/value"
