add product detail dialog to update product and show extra data

--- a/app/src/main/res/layout/fragment_current_order.xml
+++ b/app/src/main/res/layout/fragment_current_order.xml
@@ -201,6 +201,18 @@
 
                 </LinearLayout>
 
+
+                <LinearLayout
+                    android:id="@+id/productsRecycler_layout"
+                    style="@style/linear_order_item_style">
+                <androidx.recyclerview.widget.RecyclerView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/productsRecycler"
+                    />
+
+                </LinearLayout>
+
                 <LinearLayout
                     android:id="@+id/ddafdff"
                     style="@style/linear_order_item_style">
