--- a/app/src/main/res/layout/product_detail_dialog.xml
+++ b/app/src/main/res/layout/product_detail_dialog.xml
@@ -26,6 +26,7 @@
         tools:text="@string/dummy_product"
         android:textStyle="bold"
         android:textSize="18sp"
+        android:textColor="@color/black_text_color"
         android:layout_marginTop="5dp"
         app:layout_constraintTop_toBottomOf="@id/productImg"
         app:layout_constraintStart_toStartOf="parent"
@@ -34,13 +35,77 @@
         />
 
 
+    <ImageView
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:id="@+id/increase"
+        android:background="@color/primary"
+        android:src="@drawable/fab_add"
+        app:layout_constraintTop_toBottomOf="@id/product_name"
+        app:layout_constraintStart_toEndOf="@id/quantity"
+        android:layout_marginTop="5dp"
+        android:layout_marginStart="5dp"
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:id="@+id/quantity"
+        tools:text="2"
+        android:textSize="18sp"
+        android:textColor="@color/light_black"
+        app:layout_constraintTop_toTopOf="@id/increase"
+        app:layout_constraintBottom_toBottomOf="@id/increase"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        />
+
+    <ImageView
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:id="@+id/decrease"
+        android:scaleType="fitXY"
+        android:background="@color/primary"
+        app:layout_constraintEnd_toStartOf="@id/quantity"
+        app:layout_constraintTop_toTopOf="@id/increase"
+        android:src="@drawable/ic_remove_black_24dp"
+        android:layout_marginEnd="5dp"
+        />
+
+
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/products_label"
+        android:text="@string/products"
+        android:textStyle="bold"
+        android:textColor="@color/main_color_grey_700"
+        android:textSize="18sp"
+        app:layout_constraintTop_toBottomOf="@id/increase"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="10dp"
+        android:layout_marginStart="5dp"
+        />
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/productsRecyclerContainer"
+        app:cardElevation="3dp"
+        android:layout_margin="2dp"
+        app:layout_constraintTop_toBottomOf="@id/products_label"
+        >
+
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="150sp"
+        android:padding="3dp"
         android:id="@+id/productsRecycler"
-        app:layout_constraintTop_toBottomOf="@id/product_name"
         android:layout_marginTop="10dp"
         />
+
+    </androidx.cardview.widget.CardView>
 
 
     <androidx.recyclerview.widget.RecyclerView
@@ -49,7 +114,7 @@
         android:id="@+id/extra_data_recycler"
         android:background="@drawable/frame"
         android:layout_marginTop="10dp"
-        app:layout_constraintTop_toBottomOf="@id/productsRecycler"
+        app:layout_constraintTop_toBottomOf="@id/productsRecyclerContainer"
         />
 
     <Button
