--- a/app/src/main/res/layout/cart_item.xml
+++ b/app/src/main/res/layout/cart_item.xml
@@ -83,6 +83,8 @@
         tools:text="@string/dummy_product"
         android:textSize="15sp"
         android:padding="1dp"
+        android:maxLines="2"
+        android:ellipsize="end"
         android:background="@color/txt_bg"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="@id/item_img"
