--- a/app/src/main/res/layout/new_order_dialog.xml
+++ b/app/src/main/res/layout/new_order_dialog.xml
@@ -121,71 +121,23 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-                <Spinner
-                    android:id="@+id/product"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
+                    android:orientation="vertical"
                     android:background="@drawable/ic_background_gray_new_order"
-                    android:paddingStart="8dp"
-                    android:paddingEnd="8dp" />
+                    >
+
+
 
                 <ImageView
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:id="@+id/addNewProduct"
-                    android:src="@drawable/ic_add_circle_black_24dp"/>
+                    android:src="@drawable/ic_add_circle_black_24dp"
+                    android:layout_gravity="end"/>
                 </LinearLayout>
 
 
             </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginEnd="16dp"
-                android:orientation="vertical">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/item_no"
-                    android:textColor="@color/colorPrimary"
-                    android:textSize="18sp"
-                    android:textStyle="bold" />
-
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-                    <EditText
-                        android:inputType="number"
-                        android:id="@+id/item_no"
-                        android:layout_width="0dp"
-                        android:layout_weight="1"
-                        android:layout_height="40dp"
-                        android:background="@drawable/ic_background_gray_new_order"
-                        android:paddingStart="8dp"
-                        android:paddingEnd="8dp" />
-
-
-                    <ImageView
-                        android:layout_width="40dp"
-                        android:layout_height="40dp"
-                        android:id="@+id/item_no_paste"
-                        android:layout_gravity="center"
-                        android:src="@drawable/ic_content_paste_black_24dp"/>
-
-                </LinearLayout>
-
-
-            </LinearLayout>
 
 
             <LinearLayout
