--- a/app/src/main/res/layout/cart_item.xml
+++ b/app/src/main/res/layout/cart_item.xml
@@ -16,7 +16,7 @@
     <ImageView
         android:layout_width="130dp"
         android:layout_height="130dp"
-        android:src="@drawable/product"
+        tools:src="@drawable/product"
         android:id="@+id/item_img"
         android:scaleType="fitXY"
         app:layout_constraintTop_toTopOf="parent"
