--- a/app/src/main/res/layout/cart_item.xml
+++ b/app/src/main/res/layout/cart_item.xml
@@ -14,7 +14,7 @@
     android:layout_height="wrap_content">
 
     <ImageView
-        android:layout_width="130dp"
+        android:layout_width="match_parent"
         android:layout_height="130dp"
         tools:src="@drawable/product"
         android:id="@+id/item_img"
