--- a/app/src/main/res/layout/fragment_current_order.xml
+++ b/app/src/main/res/layout/fragment_current_order.xml
@@ -120,80 +120,8 @@
                     </FrameLayout>
                 </LinearLayout>
 
-                <LinearLayout
-                    android:id="@+id/product_label_view"
-                    style="@style/linear_order_item_style">
-
-                    <TextView
-                        android:id="@+id/product_label"
-                        style="@style/oder_item_label_style"
-                        android:text="@string/Product" />
-
-                    <FrameLayout
-                        android:id="@+id/product2"
-                        style="@style/oder_item_frame_style">
-
-                        <Spinner
-                            android:id="@+id/single_order_product_spinner"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical"
-                            android:layout_marginEnd="26dp"
-                            android:background="@color/gray"
-                            android:paddingStart="16dp"
-                            android:tag="client_name_label" />
-                    </FrameLayout>
 
 
-
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/products_view"
-                    style="@style/linear_order_item_style">
-
-                    <TextView
-                        android:id="@+id/products"
-                        style="@style/oder_item_label_style"
-                        android:text="@string/Products" />
-
-                    <FrameLayout
-                        android:id="@+id/ffgxrgr"
-                        style="@style/oder_item_frame_style">
-
-                        <TextView
-                            android:id="@+id/no_products"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center" />
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:orientation="horizontal">
-
-                            <ImageView
-                                android:id="@+id/add_product"
-                                android:layout_width="@dimen/_40sdp"
-                                android:layout_height="@dimen/_35sdp"
-                                android:layout_gravity="center"
-                                android:paddingTop="@dimen/_4sdp"
-                                android:src="@drawable/ic_add_circle_black_24dp" />
-
-                            <androidx.recyclerview.widget.RecyclerView
-                                android:id="@+id/products_recycler_view"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_marginEnd="@dimen/_18ssp"
-                                android:padding="@dimen/_4sdp" />
-
-
-                        </LinearLayout>
-
-                    </FrameLayout>
-
-                </LinearLayout>
 
 
                 <LinearLayout
@@ -204,6 +132,14 @@
                     android:layout_height="wrap_content"
                     android:id="@+id/productsRecycler"
                     />
+
+                    <ImageView
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:id="@+id/add_product"
+                        android:src="@drawable/ic_add_circle_black_24dp"
+                        android:layout_gravity="center"
+                        />
 
                 </LinearLayout>
 
@@ -374,48 +310,9 @@
                     </FrameLayout>
                 </LinearLayout>
 
-                <!--item cost-->
-                <LinearLayout
-                    android:id="@+id/dplkjdf"
-                    style="@style/linear_order_item_style">
-
-                    <TextView
-                        android:id="@+id/item_cost_label"
-                        style="@style/oder_item_label_style"
-                        android:text="@string/item_cost" />
-
-                    <FrameLayout
-                        android:id="@+id/item_cost2"
-                        style="@style/oder_item_frame_style">
-
-                        <EditText
-                            android:id="@+id/item_cost"
-                            style="@style/oder_item_edit_text_style" />
-                    </FrameLayout>
-
-                </LinearLayout>
 
                 <!--item no-->
-                <LinearLayout
-                    android:id="@+id/ddmnbvf"
-                    style="@style/linear_order_item_style">
 
-                    <TextView
-                        android:id="@+id/item_no_label"
-                        style="@style/oder_item_label_style"
-                        android:text="@string/item_no" />
-
-                    <FrameLayout
-                        android:id="@+id/item_no2"
-                        style="@style/oder_item_frame_style">
-
-                        <EditText
-                            android:id="@+id/item_no"
-                            android:inputType="number"
-                            style="@style/oder_item_edit_text_style_editable" />
-                    </FrameLayout>
-
-                </LinearLayout>
 
                 <!--discount-->
                 <LinearLayout
